<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.gogreen.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_map"
        android:name="com.example.gogreen.ui.map.MapsFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/nav_restaurant"
        android:name="com.example.gogreen.ui.restaurant.RestaurantFragment"
        android:label="@string/menu_restaurant"
        tools:layout="@layout/fragment_restaurant" />

    <fragment
        android:id="@+id/nav_grocery"
        android:name="com.example.gogreen.ui.grocery.GroceryFragment"
        android:label="@string/menu_grocery"
        tools:layout="@layout/fragment_grocery" />

    <fragment
        android:id="@+id/nav_shop"
        android:name="com.example.gogreen.ui.shop.ShopFragment"
        android:label="@string/menu_shop"
        tools:layout="@layout/fragment_shop" />

    <fragment
        android:id="@+id/nav_education"
        android:name="com.example.gogreen.ui.education.EducationFragment"
        android:label="@string/menu_education"
        tools:layout="@layout/fragment_education" />

    <fragment
        android:id="@+id/nav_deals"
        android:name="com.example.gogreen.ui.deals.DealsFragment"
        android:label="@string/menu_deals"
        tools:layout="@layout/fragment_deals" />

    <fragment
        android:id="@+id/home_resto"
        android:name="com.example.gogreen.ui.restaurant.RestaurantFragment"
        android:label="@string/menu_restaurant"
        tools:layout="@layout/fragment_restaurant" />

    <fragment
        android:id="@+id/home_grocery"
        android:name="com.example.gogreen.ui.grocery.GroceryFragment"
        android:label="@string/menu_grocery"
        tools:layout="@layout/fragment_grocery" />

    <fragment
        android:id="@+id/home_shop"
        android:name="com.example.gogreen.ui.shop.ShopFragment"
        android:label="@string/menu_shop"
        tools:layout="@layout/fragment_shop" />

    <fragment
        android:id="@+id/home_edu"
        android:name="com.example.gogreen.ui.education.EducationFragment"
        android:label="@string/menu_education"
        tools:layout="@layout/fragment_education" />

</navigation>